--- a/Services/PhotoStock/FreeCourse.Services.PhotoStock/FreeCourse.Services.PhotoStock.csproj
+++ b/Services/PhotoStock/FreeCourse.Services.PhotoStock/FreeCourse.Services.PhotoStock.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
