--- a/Services/Basket/FreeCourse.Services.Basket/FreeCourse.Services.Basket.csproj
+++ b/Services/Basket/FreeCourse.Services.Basket/FreeCourse.Services.Basket.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
