--- a/Services/Discount/FreeCourse.Services.Discount/FreeCourse.Services.Discount.csproj
+++ b/Services/Discount/FreeCourse.Services.Discount/FreeCourse.Services.Discount.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\FreeCourse.Shared\FreeCourse.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
