Created DiscountService in Discount API. Used dapper that it a ORM tool in this service.

--- a/Services/Discount/FreeCourse.Services.Discount/appsettings.json
+++ b/Services/Discount/FreeCourse.Services.Discount/appsettings.json
@@ -1,4 +1,9 @@
 {
+  {
+    "ConnectionStrings": {
+      "PostgreSql": ""
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
