Created discount table in PostgreSQL databse.

--- a/Services/Discount/FreeCourse.Services.Discount/appsettings.json
+++ b/Services/Discount/FreeCourse.Services.Discount/appsettings.json
@@ -1,7 +1,7 @@
 {
   {
     "ConnectionStrings": {
-      "PostgreSql": ""
+      "PostgreSql": "User ID=admin; Password-Password12*; Server=localhost; Port=5432; Database=discountdb;Integrated,Security=true;Pooling=true"
     }
   },
   "Logging": {
