--- a/Services/Discount/FreeCourse.Services.Discount/FreeCourse.Services.Discount.csproj
+++ b/Services/Discount/FreeCourse.Services.Discount/FreeCourse.Services.Discount.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
     <PackageReference Include="Npgsql" Version="6.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.21.0" />
   </ItemGroup>
 
   <ItemGroup>
