--- a/Services/Discount/FreeCourse.Services.Discount/appsettings.json
+++ b/Services/Discount/FreeCourse.Services.Discount/appsettings.json
@@ -4,6 +4,7 @@
       "PostgreSql": "User ID=admin; Password-Password12*; Server=localhost; Port=5432; Database=discountdb;Integrated,Security=true;Pooling=true"
     }
   },
+  "IdentityServerURL": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
