--- a/Services/Order/FreeCourse.Services.Order.API/appsettings.json
+++ b/Services/Order/FreeCourse.Services.Order.API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1444;Database=OrderDb;User=sa;Password=orhun123*"
   },
+  "IdentityServerURL": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
