--- a/Services/FakePayment/FreeCourse.Services.FakePayment/FreeCourse.Services.FakePayment.csproj
+++ b/Services/FakePayment/FreeCourse.Services.FakePayment/FreeCourse.Services.FakePayment.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.21.0" />
   </ItemGroup>
 
   <ItemGroup>
