Created GetAccessTokenByRefreshToken method in IdentityService. Now we get new token with refresh_token instead of username password

--- a/Frontends/FreeCourse.Web/appsettings.json
+++ b/Frontends/FreeCourse.Web/appsettings.json
@@ -6,11 +6,11 @@
   "ClientSettings": {
     "WebClient": {
       "ClientId": "WebMvcClient",
-      "ClientSecret": "secret"
+      "ClientSecret": "Secret"
     },
     "WebClientForUser": {
       "ClientId": "WebMvcClientForUser",
-      "ClientSecret": "secret"
+      "ClientSecret": "Secret"
     }
   },
   "Logging": {
