I created basket controller.

--- a/Frontends/FreeCourse.Web/FreeCourse.Web.csproj
+++ b/Frontends/FreeCourse.Web/FreeCourse.Web.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Services\Catalog\FreeCourse.Services.Catalog\FreeCourse.Services.Catalog.csproj" />
     <ProjectReference Include="..\..\Shared\FreeCourse.Shared\FreeCourse.Shared.csproj" />
   </ItemGroup>
 
