--- a/Services/Order/FreeCourse.Services.Order.Application/FreeCourse.Services.Order.Application.csproj
+++ b/Services/Order/FreeCourse.Services.Order.Application/FreeCourse.Services.Order.Application.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.1.7" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.7" />
   </ItemGroup>
 
   <ItemGroup>
