I created TokenExhangeDelegateHandler in API Gateway.

--- a/FreeCourse.Gateway/configuration.development.json
+++ b/FreeCourse.Gateway/configuration.development.json
@@ -62,10 +62,10 @@
       ],
       "UpstreamPathTemplate": "/services/discount/{everything}",
       "UpstreamHttpMethod": [ "Get", "Post", "Put", "Delete" ],
+      "DelegatingHandlers": [ "TokenExhangeDelegateHandler" ],
       "UpstreamSchema": "http",
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "GatewayAuthenticationSchema",
-        "AllowedScopes": [ "discount_fullpermission" ]
+        "AuthenticationProviderKey": "GatewayAuthenticationSchema"
       }
     },
     {
@@ -96,10 +96,10 @@
       ],
       "UpstreamPathTemplate": "/services/fakepayment/{everything}",
       "UpstreamHttpMethod": [ "Get", "Post", "Put", "Delete" ],
+      "DelegatingHandlers": [ "TokenExhangeDelegateHandler" ],
       "UpstreamSchema": "http",
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "GatewayAuthenticationSchema",
-        "AllowedScopes": [ "payment_fullpermission" ]
+        "AuthenticationProviderKey": "GatewayAuthenticationSchema"
       }
     }
   ],
