--- a/FreeCourse.Gateway/appsettings.json
+++ b/FreeCourse.Gateway/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ClientId": "TokenExhangeClient",
-  "ClientSecret": "secret",
+  "ClientSecret": "Secret",
   "TokenGrantType": "urn:ietf:params:oauth:grant-type:token-exchange",
   "IdentityServerURL": "http://localhost:5001",
   "Logging": {
