--- a/Services/Catalog/FreeCourse.Services.Catalog/appsettings.json
+++ b/Services/Catalog/FreeCourse.Services.Catalog/appsettings.json
@@ -5,6 +5,8 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "CatalogDb"
   },
+  "IdentityServerURL": "http://localhost:5001",
+  "RabbitMQUrl": "localhost",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
