--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,16 @@ services:
     build:
       context: .
       dockerfile: IdentityServer/FreeCourse.IdentityServer/Dockerfile
-   basket.api:
+  basket.api:
     image: basket_api_image
     build:
       context: .
       dockerfile: Services/Basket/FreeCourse.Services.Basket/Dockerfile
+  photostock.api:
+    image: photostock_api_image
+    build:
+      context: .
+      dockerfile: Services/PhotoStock/FreeCourse.Services.PhotoStock/Dockerfile
 volumes:
   catalogdb_volume:
   discount_volume:
