--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,21 @@ services:
     build:
       context: .
       dockerfile: Services/PhotoStock/FreeCourse.Services.PhotoStock/Dockerfile
+  discount.api:
+    image: discount_api_image
+    build:
+      context: .
+      dockerfile: Services/Discount/FreeCourse.Services.Discount/Dockerfile
+  fakepayment.api:
+    image: fakepayment_api_image
+    build:
+      context: .
+      dockerfile: Services/FakePayment/FreeCourse.Services.FakePayment/Dockerfile
+  order.api:
+    image: order_api_image
+    build:
+      context: .
+      dockerfile: Services/Order/FreeCourse.Services.Order.API/Dockerfile
 volumes:
   catalogdb_volume:
   discount_volume:
