--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,16 @@ services:
     build:
       context: .
       dockerfile: Services/Order/FreeCourse.Services.Order.API/Dockerfile
+  gateway.api:
+    image: gateway_api_image
+    build:
+      context: .
+      dockerfile: FreeCourse.Gateway/Dockerfile
+  aspnetcoremvc.web:
+    image: aspnetcoremvc.web_image
+    build:
+      context: .
+      dockerfile: Frontends/FreeCourse.Web/Dockerfile
 volumes:
   catalogdb_volume:
   discount_volume:
